@@ -39,8 +39,8 @@ typedef struct {
 // information would be redundant.
 
 /*typedef enum {
-	FILTER_NONE, FILTER_BOX, FILTER_GAUSSIAN, FILTER_MITCHELL,
-	FILTER_MITCHELL_SS, FILTER_BLACKMANHARRIS
+	FILTER_NONE, FILTER_BOX, FILTER_GAUSSIAN, FILTER_MITCHELL, FILTER_MITCHELL_SS,
+	FILTER_BLACKMANHARRIS, FILTER_SINC,
 } FilterType;
 
 typedef struct {
