@@ -28,6 +28,7 @@
 #include "slg/film/filters/mitchell.h"
 #include "slg/film/filters/mitchellss.h"
 #include "slg/film/filters/blackmanharris.h"
+#include "slg/film/filters/sinc.h"
 
 namespace slg {
 
@@ -63,6 +64,7 @@ protected:
 	OBJECTSTATICREGISTRY_DECLARE_REGISTRATION(FilterRegistry, MitchellFilter);
 	OBJECTSTATICREGISTRY_DECLARE_REGISTRATION(FilterRegistry, MitchellSSFilter);
 	OBJECTSTATICREGISTRY_DECLARE_REGISTRATION(FilterRegistry, BlackmanHarrisFilter);
+	OBJECTSTATICREGISTRY_DECLARE_REGISTRATION(FilterRegistry, SincFilter);
 	// Just add here any new Filter (don't forget in the .cpp too)
 
 	friend class Filter;
