@@ -90,3 +90,6 @@ film.imagepipelines.0.1.value = 2.2
 #film.imagepipelines.1.1.scale = 1.2
 #film.imagepipelines.1.2.type = GAMMA_CORRECTION
 #film.imagepipelines.1.2.value = 2.2
+##
+#film.filter.type = SINC
+#film.filter.sinc.tau = 1
