@@ -9,6 +9,7 @@
 * Added the support for camera not uniform and anamorphic bokeh (issue #409)
 * Variance clamping is now applied separately to each radiance group (issue #414)
 * Added the support for lateral and longitudinal chromatic aberration (issue #409)
+* Added the support for SINC pixel filter (issue #415)
 
 ### Fixed Bugs
 
